--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap");
+
 body,
 html {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Poppins", sans-serif;
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
   color: #777;
@@ -11,7 +13,7 @@ html {
 h2,
 h3,
 h4 {
-  font-family: "Raleway", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 h2 {
   text-transform: uppercase;
@@ -77,8 +79,7 @@ hr {
 }
 #menu.navbar-default {
   background-color: #fff;
-  border-color: rgba(231, 231, 231, 0);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+
 }
 #menu a.navbar-brand {
   font-family: "Raleway", sans-serif;
@@ -263,6 +264,7 @@ header .intro-text {
 /* About Section */
 #about {
   padding: 100px 0;
+  margin-top: -50px;
 }
 #about h3 {
   font-size: 22px;
@@ -310,14 +312,24 @@ header .intro-text {
 /* Services Section */
 #services {
   padding: 100px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
-  color: #fff;
+  background-color: #ffffff;
+  color: #000000;
 }
+
+#services .container{
+    background-color: #f1f6fd;
+    border-radius: 5px;
+    box-shadow: 0 0.4rem 1.2rem  rgba(0, 0, 0, 0.25);
+    margin-top:-150px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    z-index: 20;
+  }
 #services .service-desc {
   margin: 10px 10px 20px;
 }
 #services h2 {
-  color: #fff;
+  color: #000000;
 }
 #services .section-title h2::after {
   position: absolute;
@@ -342,10 +354,10 @@ header .intro-text {
 #services h3 {
   font-weight: 500;
   padding: 5px 0;
-  color: #fff;
+  color: #000000;
 }
 #services p {
-  color: rgba(255, 255, 255, 0.75);
+  color: #000000;
 }
 #services .service-desc {
   margin-bottom: 40px;
@@ -460,7 +472,7 @@ header .intro-text {
 /* Contact Section */
 #contact {
   padding: 100px 0 60px;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background-color: #f1f6fd;
   color: rgba(255, 255, 255, 0.75);
 }
 #contact .section-title {
