--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,23 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap");
 .intro {
     display: table;
     width: 100%;
     padding: 0;
-    background: url(./intro-bg.jpg) center center no-repeat;
-    background-color: #e5e5e5;
+    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1037%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='rgba(241%2c 245%2c 253%2c 1)'%3e%3c/rect%3e%3cpath d='M0%2c461.384C93.97%2c471.745%2c188.274%2c464.664%2c276.042%2c429.529C377.189%2c389.038%2c490.423%2c343.698%2c538.37%2c245.865C586.502%2c147.653%2c538.302%2c33.098%2c523.432%2c-75.258C508.457%2c-184.38%2c527.447%2c-311.498%2c451.001%2c-390.795C374.794%2c-469.845%2c248.813%2c-468.481%2c139.144%2c-473.881C48.121%2c-478.363%2c-37.55%2c-450.612%2c-123.047%2c-419.06C-203.158%2c-389.496%2c-285.465%2c-360.343%2c-341.979%2c-296.327C-398.767%2c-232.001%2c-426.053%2c-147.942%2c-437.47%2c-62.899C-448.812%2c21.579%2c-441.964%2c108.135%2c-406.698%2c185.733C-371.393%2c263.417%2c-310.145%2c324.811%2c-239.511%2c372.686C-167.58%2c421.439%2c-86.373%2c451.861%2c0%2c461.384' fill='%23b0c7f4'%3e%3c/path%3e%3cpath d='M1440 1045.684C1562.24 1039.575 1687.588 1171.335 1793.839 1110.5839999999998 1898.758 1050.595 1873.549 890.163 1912.247 775.668 1946.252 675.057 2010.238 584.572 2007.505 478.405 2004.5900000000001 365.14300000000003 1968.421 251.986 1896.5140000000001 164.42899999999997 1823.6480000000001 75.70499999999998 1718.366 19.220000000000027 1607.1109999999999-9.128000000000043 1498.33-36.84500000000003 1383.474-30.43100000000004 1277.541 6.716000000000008 1174.965 42.684999999999945 1101.808 124.34199999999998 1020.56 196.553 926.58 280.079 804.637 343.759 764.319 462.852 721.588 589.073 745.048 730.9 798.309 853.0509999999999 852.082 976.375 933.8240000000001 1108.4389999999999 1062.68 1147.121 1189.998 1185.341 1307.2350000000001 1052.319 1440 1045.684' fill='white'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1037'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
   }
-  .intro .overlay {
-    background: rgba(0, 0, 0, 0.2);
-  }
+  
   .intro h1 {
-    font-family: "Raleway", sans-serif;
-    color: #fff;
-    font-size: 82px;
+    font-family: "Poppins", sans-serif;
+    color: #333333;
+    font-size: 4.5rem;;
     font-weight: 700;
-    text-transform: uppercase;
+    text-transform: capitalize;
     margin-top: 0;
     margin-bottom: 10px;
   }
@@ -26,8 +24,8 @@
     color: #5ca9fb;
   }
   .intro p {
-    color: #fff;
-    font-size: 22px;
+    color: #333333;
+    font-size: 2rem;
     font-weight: 300;
     line-height: 30px;
     margin: 0 auto;
@@ -36,6 +34,14 @@
   header .intro-text {
     padding-top: 350px;
     padding-bottom: 200px;
-    text-align: center;
+    text-align:left ;
+  }
+
+  @media screen and (min-width:600px) {
+    
+    .intro-text {
+      margin-left: -110px;
+    }
+
   }
   
