--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,40 +1,143 @@
-#testimonials {
-    padding: 100px 0;
-    background: #f6f6f6;
+#menu {
+  padding: 15px;
+  transition: all 0.8s;
+  height: 65px;
+}
+#menu.navbar {
+  background-color: #f1f5fd;
+  
+}
+#menu a.navbar-brand {
+  font-family: "Poppins", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: #333;
+  text-transform: capitalize;
+}
+#menu.navbar .navbar-nav > li > a {
+  font-family:  "Poppins", sans-serif;
+  text-transform: capitalize;
+  color: #555;
+  font-size: 1.7rem;
+  font-weight: lighter;
+  padding: 8px 2px;
+  margin: 9px 20px 0;
+}
+#menu.navbar .navbar-nav > li > a:after {
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 0;
+  height: 2px;
+  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  content: "";
+  transition: width 0.2s;
+}
+#menu.navbar .navbar-nav > li > a:hover:after {
+  width: 100%;
+}
+.navbar .navbar-nav > .active > a,
+.navbar .navbar-nav > .active > a:hover,
+.navbar .navbar-nav > .active > a:focus {
+  background-color: transparent;
+}
+.navbar .navbar-nav > .active > a:after,
+.navbar .navbar-nav > .active > a:hover:after,
+.navbar .navbar-nav > .active > a:focus:after {
+  display: block !important;
+  position: absolute !important;
+  left: 0 !important;
+  bottom: -1px !important;
+  width: 100% !important;
+  height: 2px !important;
+  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%) !important;
+  content: "" !important;
+  transition: width 0.2s !important;
+}
+.navbar-toggle {
+  border-radius: 0;
+}
+.navbar .navbar-toggle:hover,
+.navbar .navbar-toggle:focus {
+  background-color: #fff;
+  border-color: #608dfd;
+}
+.navbar .navbar-toggle:hover > .icon-bar {
+  background-color: #608dfd;
+}
+.section-title {
+  margin-bottom: 70px;
+}
+.section-title h2 {
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+}
+.section-title h2::after {
+  position: absolute;
+  content: "";
+  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  height: 4px;
+  width: 60px;
+  bottom: 0;
+  margin-left: -30px;
+  left: 50%;
+}
+.section-title p {
+  font-size: 18px;
+}
+.btn-custom {
+  font-family:  "Poppins", sans-serif;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #5ca9fb;
+  background-image: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  padding: 14px 34px;
+  letter-spacing: 1px;
+  margin: 0;
+  font-size: 15px;
+  font-weight: 500;
+  border-radius: 25px;
+  transition: all 0.5s linear;
+  border: 0;
+}
+.btn-custom:hover,
+.btn-custom:focus,
+.btn-custom.focus,
+.btn-custom:active,
+.btn-custom.active {
+  color: #fff;
+  background-image: none;
+  background-color: #6372ff;
+}
+.btn:active,
+.btn.active {
+  background-image: none;
+  outline: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+a:focus,
+.btn:focus,
+.btn:active:focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn.active.focus {
+  outline: none;
+  outline-offset: none;
+}
+
+
+
+
+@media screen and (min-width: 600px){
+
+  #menu a.navbar-brand {
+      margin-left: -110px;
   }
-  #testimonials i {
-    color: #e6e6e6;
-    font-size: 32px;
-    margin-bottom: 20px;
-  }
-  .testimonial {
-    position: relative;
-    padding: 20px;
-  }
-  .testimonial-image {
-    float: left;
-    margin-right: 15px;
-  }
-  .testimonial-image,
-  .testimonial-image img {
-    display: block;
-    width: 64px;
-    height: 64px;
-    border-radius: 50%;
-  }
-  .testimonial-content {
-    position: relative;
-    overflow: hidden;
-  }
-  .testimonial-content p {
-    margin-bottom: 0;
-    font-size: 14px;
-    font-style: italic;
-  }
-  .testimonial-meta {
-    margin-top: 10px;
-    font-size: 15px;
-    font-weight: 600;
-    color: #666;
-  }
+
+}
   
