--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -1,7 +1,19 @@
 #services {
     padding: 100px 0;
-    background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+    width:80%;
+    background-color: #ffffff;
+    
     color: #fff;
+  }
+
+  #services .container{
+    background-color: #f1f6fd;
+    border-radius: 5px;
+    box-shadow: 0 0.4rem 1.2rem  rgba(0, 0, 0, 0.25);
+    margin-top:-150px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    z-index: 20;
   }
   #services .service-desc {
     margin: 10px 10px 20px;
