--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,7 +1,7 @@
 #contact {
     padding: 100px 0 60px;
     background: rgb(175,198,244);
-    color: rgba(255, 255, 255, 0.75);
+    color: rgba(0, 0, 0, 0.75);
   }
   #contact .section-title {
     margin-bottom: 40px;
@@ -10,7 +10,7 @@
     font-size: 16px;
   }
   #contact h2 {
-    color: #fff;
+    color: rgba(0, 0, 0, 0.75);
     margin-top: 10px;
     margin-bottom: 15px;
     padding-bottom: 15px;
@@ -18,14 +18,14 @@
   #contact .section-title h2::after {
     position: absolute;
     content: "";
-    background: rgba(255, 255, 255, 0.3);
+    background: rgba(0, 0, 0, 0.75);
     height: 4px;
     width: 60px;
     bottom: 0;
     left: 30px;
   }
   #contact h3 {
-    color: #fff;
+    color: rgba(0, 0, 0, 0.75);
     margin-top: 80px;
     margin-bottom: 25px;
     padding-bottom: 20px;
@@ -41,7 +41,7 @@
   #contact .btn-custom {
     margin: 30px 0;
     background: transparent;
-    border: 2px solid #fff;
+    border: 2px solid rgba(0, 0, 0, 0.75);
   }
   #contact .btn-custom:hover {
     color: #1f386e;
@@ -63,7 +63,7 @@
     background-color: #fff;
     background-image: none;
     border: 1px solid #ddd;
-    border-radius: 0;
+    border-radius: 5px;
     -webkit-box-shadow: none;
     box-shadow: none;
     -webkit-transition: none;
@@ -92,12 +92,14 @@
     margin: 20px 0;
   }
   #contact .contact-item span {
-    color: rgba(255, 255, 255, 1);
+    color: rgba(0, 0, 0, 0.75);
     margin-bottom: 10px;
     display: block;
+    font-weight: 800;
   }
   #contact .contact-item i.fa {
     margin-right: 10px;
+    font-weight: bold;
   }
   #contact .social {
     border-top: 1px solid rgba(255, 255, 255, 0.15);
@@ -115,7 +117,7 @@
     height: 48px;
     padding: 12px 0;
     border: 2px solid #fff;
-    color: #fff;
+    color: rgba(0, 0, 0, 0.75);
     border-radius: 50%;
     transition: all 0.3s;
   }
